--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@prisma/extension-accelerate": "^2.0.1",
     "dotenv": "^16.5.0",
     "ejs": "^3.1.10",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "express-session": "^1.18.1",
+    "node-cache": "^5.1.2"
   },
   "devDependencies": {
     "prisma": "^6.10.1"
