--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "@prisma/client": "^6.10.1",
     "@prisma/extension-accelerate": "^2.0.1",
     "@quixo3/prisma-session-store": "^3.1.13",
+    "axios": "^1.10.0",
     "dotenv": "^16.5.0",
     "ejs": "^3.1.10",
     "express": "^5.1.0",
     "express-session": "^1.18.1",
+    "form-data": "^4.0.3",
     "node-cache": "^5.1.2"
   },
   "devDependencies": {
