--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "express": "^5.1.0",
     "express-session": "^1.18.1",
     "form-data": "^4.0.3",
-    "node-cache": "^5.1.2"
+    "jsonwebtoken": "^9.0.2",
+    "node-cache": "^5.1.2",
+    "nodemailer": "^7.0.5"
   },
   "devDependencies": {
     "prisma": "^6.10.1"
