--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "form-data": "^4.0.3",
     "jsonwebtoken": "^9.0.2",
     "node-cache": "^5.1.2",
-    "nodemailer": "^7.0.5"
+    "nodemailer": "^7.0.5",
+    "resend": "^6.6.0"
   },
   "devDependencies": {
     "@prisma/client": "^6.12.0",
