--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "node app.js",
     "dev": "nodemon app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "author": "",
   "license": "ISC",
@@ -27,6 +27,8 @@
   },
   "devDependencies": {
     "@prisma/client": "^6.12.0",
-    "prisma": "^6.12.0"
+    "jest": "^30.2.0",
+    "prisma": "^6.12.0",
+    "supertest": "^7.1.4"
   }
 }
